# guidemyride-project

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  conanfile.py  conanfile.txt
cmake/: CheckCompiler.cmake  Tests.cmake
cmake/presets/: base.json  libs.json  services.json
cmake/presets/libs/: common.json
cmake/presets/services/: auth.json  driver.json  passenger.json
include/guidemyride/: connection.h  connection_pool.h  postgres_connection.h  session.h
include/guidemyride/connections/: connection.h  connection_pool.h  postgres.h
include/guidemyride/models/: driver.h  session.h
include/guidemyride/transaction/: except.h  result.h  transaction.h
include/guidemyride/utils/: hash.h
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/include/guidemyride/models/: driver.h  session.h
libs/common/include/guidemyride/transaction/: params.h
libs/common/src/: CMakeLists.txt
libs/common/src/models/: driver.cc  session.cc
libs/common/tests/: CMakeLists.txt
libs/common/tests/integration/: CMakeLists.txt
libs/common/tests/unit/: CMakeLists.txt
proto/: CMakeLists.txt  auth.proto  driver.proto  passenger.proto
services/: CMakeLists.txt
services/auth/: .gitignore  CMakeLists.txt
services/auth/src/: CMakeLists.txt  authd.cc
services/auth/src/controllers/: controllers.h  stub_method.cc
services/auth/tests/: CMakeLists.txt
services/auth/tests/integration/: CMakeLists.txt
services/auth/tests/unit/: CMakeLists.txt  stub.test.cc
services/driver/: CMakeLists.txt
services/driver/src/: CMakeLists.txt  driverd.cc
services/driver/src/controllers/: controllers.h  stub_method.cc
services/driver/tests/: CMakeLists.txt
services/driver/tests/integration/: CMakeLists.txt
services/driver/tests/unit/: CMakeLists.txt  stub.test.cc
services/passenger/: CMakeLists.txt
services/passenger/src/: CMakeLists.txt  passengerd.cc
services/passenger/src/controllers/: controllers.h  stub_method.cc
services/passenger/tests/: CMakeLists.txt
services/passenger/tests/integration/: CMakeLists.txt
services/passenger/tests/unit/: CMakeLists.txt  stub.test.cc
src/: CMakeLists.txt  connection_pool.cc  postgres_connection.cc
src/connections/: connection_pool.cc  postgres.cc
src/models/: session.cc
src/utils/: hash.cc
tests/: CMakeLists.txt  mock_connection.h  test_connection.cc  test_connection_pool.cc
tests/integration/: CMakeLists.txt  config.h  docker-compose.yml  test_postgres_connection.cc
tests/integration/models/: test_driver.cc  test_session.cc
tests/unit/: CMakeLists.txt  mock_connection.h  test_connection.cc  test_connection_pool.cc  test_session.cc
tests/unit/utils/: test_hash.cc
